--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         },
         {
             "type": "issuehunt",
-            "url": "https://issuehunt.io/r/vairogs/extra"
+            "url": "https://issuehunt.io/r/vairogs/vairogs"
         }
     ],
     "require": {
