jetbrains/phpstorm-attributes | PHP 8

--- a/Specification/composer.json
+++ b/Specification/composer.json
@@ -40,7 +40,8 @@
         }
     ],
     "require": {
-        "php": ">=7.4.0"
+        "php": ">=7.4.0",
+        "jetbrains/phpstorm-attributes": "*"
     },
     "autoload": {
         "psr-4": {
