--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         }
     ],
     "require": {
-        "php": ">=7.4.0"
+        "php": ">=7.4.0",
+        "jetbrains/phpstorm-attributes": "*"
     },
     "replace": {
         "vairogs/extra-specification": "self.version"
